# myslamcode

./: readme.txt
ch2/: CMakeLists.txt  a.out  helloSLAM.cpp  libHelloSLAM.cpp  useHello.cpp
ch2/.kdev4/: ch2.kdev4
ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp  useEigen.kdev4
ch3/useEigen/.kdev4/: useEigen.kdev4
ch3/useGeometry/: CMakeLists.txt  useGeometry.cpp
ch3/useGeometry/.kdev4/: useGeometry.kdev4
ch4/useSophus/: CMakeLists.txt  useSophus.cpp
ch4/useSophus/.kdev4/: useSophus.kdev4
ch5/imageBasics/: CMakeLists.txt  imageBasics.cpp
ch5/imageBasics/.kdev4/: imageBasics.kdev4
ch5/joinMap/: CMakeLists.txt  joinMap  joinMap.cpp  joinMap.kdev4
ch5/joinMap/.kdev4/: joinMap.kdev4
ch6/ceres_curve_fitting/: CMakeLists.txt  main.cpp
ch6/ceres_curve_fitting/.kdev4/: ceres_curve_fitting.kdev4
ch6/g2o_curve_fitting/: CMakeLists.txt  main.cpp
ch6/g2o_curve_fitting/.kdev4/: g2o_curve_fitting.kdev4
